--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,4 @@
 #L1 - Location Admins - People who own business.
 #L2 - Data Entry operators.
 
-
-#Super Admins
-sumit.pass=dang
-sumit.level=L0
-nitin.pass=goel
-nitin.level=L0
-
-#Dummy Users
-user1.pass=pass1
-user1.level=L1
-user2.pass=pass2
-user2.level=L2
+data.folder.path=/Users/sumitdang/Documents/workspace/data/
