--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@
 #L1 - Location Admins - People who own business.
 #L2 - Data Entry operators.
 
-data.folder.path=/Users/sumitdang/Documents/workspace/data/
+data.folder.path=d:\\workspace\\data\\
+
+user.api.endpoint= 'http://localhost:8080/Usher/user/';
