Changed UI and Added location and home partial view with main.js
Changed UI and Added location and home partial view with main.js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@
 #L2 - Data Entry operators.
 
 data.folder.path.mac=/Users/sumitdang/Documents/workspace/data/
-data.folder.path=d:\\workspace\\data\\
+data.folder.path=e:\\workspace\\data\\
 
 user.api.endpoint='http://localhost:8080/Usher/v1/api/user/';
